[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/ui/notification_manager.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/NotificationMessage.tscn" type="PackedScene" id=2]

[node name="NotificationManager" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="TopMessageContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -840.0
mouse_filter = 1

[node name="NotificationMessage" parent="TopMessageContainer" instance=ExtResource( 2 )]
margin_right = 680.0
margin_bottom = 420.0

[node name="CenterMessageContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 430.0
margin_right = -20.0
margin_bottom = -430.0
mouse_filter = 1

[node name="BottomMessageContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 840.0
margin_right = -20.0
margin_bottom = -20.0
mouse_filter = 1
